# spring-clean-app

./: .gitignore  pyproject.toml
.github/workflows/: publish-to-pypi.yml
spring_clean_app/: main.py
spring_clean_app/actions/: download_project.py  project_structure.py
spring_clean_app/actions/boilerplate/: pom_config.py
spring_clean_app/utils/: utils.py
