[project]
name = "spring-clean-app"
version = "0.1.0"
description = ""
authors = [
    {name = "KAN19",email = "nguyenkiet0807@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spring-clean-app = "spring_clean_app.main:cli"
